Code review updates no.0